--- a/lab3/semanticResume.html
+++ b/lab3/semanticResume.html
@@ -150,6 +150,9 @@
                     <object width="425" height="350" type="application/x-shockwave-flash" data="https://www.youtube.com/v/YoHD9XEInc0">
                         <param name="wmode" value="transparent">
                     </object>
+                </section>
+
+                <section>
 
                     <h2 class="title">My Favorite Quote</h2>
                     <blockquote>
