--- a/lab3/Resume.html
+++ b/lab3/Resume.html
@@ -150,6 +150,9 @@
                     <object width="425" height="350" type="application/x-shockwave-flash" data="https://www.youtube.com/v/YoHD9XEInc0">
                         <param name="wmode" value="transparent">
                     </object>
+                </div>
+
+                <div class="content">
 
                     <h2 class="title">My Favorite Quote</h2>
                     <blockquote>
@@ -172,6 +175,7 @@
                     </dl>
                 </div>
             </div>
+            
             <a href="http://validator.w3.org/check/referer"><img src="./Resume_files/w3c-html.png" alt="html validation link"></a>
             <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="./Resume_files/w3c-css.png" alt="css validation link"></a>
         </div>
